# RabbitMonitor

./: .editorconfig  README.md  grafana-dashboard.json  setup.cfg
src/rabbitmonitor/: __init__.py  __main__.py  main.py
