[metadata]
name = rabbitmonitor
version = 1.0.0
author = Rabbit Company LLC
author_email = info@rabbit-company.com
description = A simple server monitor
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Rabbit-Company/RabbitMonitor
project_urls =
  Bug Tracker = https://github.com/Rabbit-Company/RabbitMonitor/issues
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: GPL-3.0 License
  Operating System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src