[metadata]
name = rabbitmonitor
version = 2.0.0
author = Rabbit Company LLC
author_email = info@rabbit-company.com
description = A simple server monitor
long_description = file: README.md
long_description_content_type = text/markdown
keywords = rabbit, monitor
license = GPLv3
url = https://github.com/Rabbit-Company/RabbitMonitor
project_urls =
  Bug Tracker = https://github.com/Rabbit-Company/RabbitMonitor/issues
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Operating System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.8
install_requires =
  quart>=0.17.0
  psutil>=5.9.0
  argparse>=1.4.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  rabbitmonitor = rabbitmonitor:start